# ros-didi

data_etl/: CMakeLists.txt  README.md  mainpage.dox  manifest.xml  run.sh
data_etl/include/yingzz/: pos.h
data_etl/src/: Imagelistener.cpp
data_etl/src/vel/: Vellistener.cpp
kitti_raw_data_tools/: README.md  demo_pcd.py  demo_pcd_box.py  demo_raw.py  demo_raw_to_pcd.py  parseTrackletXML.py  process_bin.sh  process_trainxml.sh
kitti_raw_data_tools/pykitti/: raw.py
myvel/: CMakeLists.txt  Makefile  mainpage.dox  manifest.xml
myvel/src/: CloudNodeConfig.h  calibration.cc  convert.h  rawdata.cc  rawdata.h
range/: CMakeLists.txt
range/src/: rangeimage.cpp  rangeimage_narf.cpp
range/train/: 1490148582.045.pcd  1490149257632.pcd  1490150571976.pcd
